<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ATM</string>
    <string name="title_activity_login">login_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="account_number">Enter 10-Digit Account No</string>
    <string name="pin">Enter 4-Digit pin</string>
    <string name="submit">Submit</string>
    <string name="new_account">Don\'t have an account ? <b>Sign Up</b></string>
    <string name="login">Login</string>
    <string name="forget_password">forget password ?</string>
    <string name="forget_account_number">forget account number ?</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_pin"><b>Forget PIN?</b></string>
    <string name="dont_have_account">Don\'t Have an Account? <b>Sign Up</b></string>
    <string name="hi_user">Hi User</string>
    <string name="siign_up_welcome_text">Let\'s Start Your Journey With Us...</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_account_log_in_now">Already Have Account ? <b>Log in now</b></string>
</resources>